LUCENE-9444: woops, cannot use Set.of until JDK 9